# django_tableaux

./: .gitignore  LICENSE  README.md  README.rst  do_migrate.py  pyproject.toml  pytest.ini  requirements.txt  start_server.py
.github/workflows/: publish.yml
demo_project/: manage.py  requirements.txt
demo_project/demo_project/: asgi.py  settings.py  urls.py  wsgi.py
demo_project/movies/: filters.py  forms.py  insert_data.sql  models.py  tables.py  views.py
demo_project/movies/migrations/: 0001_initial.py  0002_alter_movie_vote_average.py
demo_project/movies/templates/movies/: action_modal.html  action_page.html  base.html  list.html  movie_detail.html  movie_modal.html  navbar.html  table.html
django_tableaux/: README.md  __init__.py  apps.py  buttons.py  columns.py  tests.py  utils.py  views.py
django_tableaux/static/django_tableaux/js/: django_tableaux.js
django_tableaux/templates/django_tableaux/: block_content.html  block_head.html  block_table.html  bootstrap4.html  bootstrap5_base.html  cell_form.html  custom_bootstrap4.html  filter_settings.html  filter_toolbar.html  modal_base.html  modal_filter.html  modal_form.html  paginator.html  render_body.html  render_rows.html  render_table.html  render_table_data.html  tableaux.html  tables_pro.html
django_tableaux/templates/django_tableaux/bootstrap4/: render_body.html  render_header.html  render_paginator.html  render_table.html  render_table_data.html
django_tableaux/templates/django_tableaux/toolbar/: _actions.html  _buttons.html  _columns.html  _filter_field.html  _rows.html  main.html
django_tableaux/templatetags/: django_tableaux.py
docs/: todo
docs/source/: TableauxView.md  attributes.md  attributes.rst  columns.md  installation.md  installation.rst  introduction.md  introduction.rst  settings.md  settings.rst  templates.md  templates.rst  toolbar.md  views.md  views.rst
myapp/: models.py  settings.py  urls.py  views.py  wsgi.py
myapp/migrations/: 0001_initial.py  0002_testmodel.py
myapp/templates/myapp/: tab1.html
src/django_tableaux/: __init__.py  buttons.py  columns.py  get_htmx.py  models.py  spec.md  table.py  utils.py  views.py
src/django_tableaux/migrations/: 0001_initial.py
src/django_tableaux/static/django_tableaux/css/: django_tableaux.css  django_tableaux_base.css  dropdown.css  new_dropdown.css
src/django_tableaux/static/django_tableaux/js/: breakpoints.js  django_tableaux.js  django_tableaux_1.js  dropdown.js  new_dropdown.js
src/django_tableaux/templates/django_tableaux/: block_content.html  block_head.html  block_head_old.html  tableaux.html  toolbar.html
src/django_tableaux/templates/django_tableaux/base/: block_content.html  block_head.html  block_scripts.html  button.html  cell_edit.html  cell_error.html  cell_form.html  load_more.html  modal_base.html  modal_filter.html  modal_form.html  render_header.html  render_row.html  render_rows.html  render_table.html  render_table_data.html  (+12 more)
src/django_tableaux/templatetags/: django_tableaux.py
tests/: DummyTableauxViewTests.py  requirements.txt  settings.py  test_buttons.py  test_columns.py  test_merge_attributes.py  test_templates.py  test_utils.py  test_views.py
tests/template_library/: render_body.html
(+128 files in other folders)
