[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django_tableaux"
authors = [{name = "Ian Stewart", email = "is@iskt.co.uk"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "django-bootstrap4>=24.4",
    "django>=5.1.5",
    "django-tables2>=0.1",
    "django-htmx>=1.21.0",
    "django-filter>=24.3",
    "tablib>=3.8.0",
]

[project.urls]
Home = "https://github.com/ianastewart/django_tableaux/"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_tests.py"]
django_find_project = false
pythonpath = [".", "src"]

[tool.uv.sources]
django-tableaux = { workspace = true }

[dependency-groups]
dev = [
    "django-tableaux",
]
