[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-tableaux"
authors = [{name = "Ian Stewart", email = "is@iskt.co.uk"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "django-bootstrap4==25.2",
    "django>=4.2",
    "django-tables2>=2.4.1",
    "django-htmx==1.26.0",
    "django-filter==25.2",
    "tablib>=3.5.0",
    "pytest-django>=4.11.1",
]

[project.urls]
Home = "https://github.com/ianastewart/django_tableaux/"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_tests.py"]
django_find_project = false
pythonpath = [".", "src"]

#[tool.uv.sources]
#django-tableaux = { workspace = true }
#
#[dependency-groups]
#dev = [
#    "django-tableaux",
#]
#[[tool.uv.index]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#publish-url = "https://test.pypi.org/legacy/"