[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[project]
name = "django-tableaux"
description = "Django tables with advanced user experience"
version = "0.8.0"
authors = [{name = "Ian Stewart", email = "is@iskt.co.uk"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "django-tables2>=2.4.1",
    "django-htmx>=1.26.0",
    "django-filter>=24.3",
    "tablib>=3.5.0",
]

[project.urls]
Home = "https://github.com/ianastewart/django_tableaux/"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_tests.py"]
django_find_project = false
pythonpath = [".", "src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

#[tool.uv.sources]
#django-tableaux = { workspace = true }
#
[tool.uv_build]
include = ["docs/**"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
]
#[[tool.uv.index]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#publish-url = "https://test.pypi.org/legacy/"